--- a/azure-vote-all-in-one-redis-intlb.yaml
+++ b/azure-vote-all-in-one-redis-intlb.yaml
@@ -4,6 +4,9 @@ metadata:
   name: azure-vote-back
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: azure-vote-back
   template:
     metadata:
       labels:
@@ -32,6 +35,9 @@ metadata:
   name: azure-vote-front
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: azure-vote-front
   strategy:
     rollingUpdate:
       maxSurge: 1
