--- a/azure-vote-all-in-one-redis-intlb.yaml
+++ b/azure-vote-all-in-one-redis-intlb.yaml
@@ -14,7 +14,10 @@ spec:
     spec:
       containers:
       - name: azure-vote-back
-        image: redis
+        image: mcr.microsoft.com/oss/bitnami/redis:6.0.8
+        env:
+        - name: ALLOW_EMPTY_PASSWORD
+          value: "yes"
         ports:
         - containerPort: 6379
           name: redis
@@ -50,7 +53,7 @@ spec:
     spec:
       containers:
       - name: azure-vote-front
-        image: microsoft/azure-vote-front:v1
+        image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
         ports:
         - containerPort: 80
         resources:
